--- a/www/about.html
+++ b/www/about.html
@@ -8,16 +8,18 @@
             <span class="ios-only">Back</span>
             </a>
         </div>
-        <div class="title">About Framework7</div>
+        <div class="title">About</div>
         </div>
     </div>
     <div class="page-content">
-        <div class="block-title">Welcome to Framework7</div>
+        <div class="block-title">
+            <div class="text-align-center">
+                <img data-src="img/untad.png" class="lazy" width="64" height="64">
+                <h2>RSU Tadulako</h2>
+            </div>
+        </div>
         <div class="block block-strong">
-        <p>Framework7 - is a free and open source HTML mobile framework to develop hybrid mobile apps or web apps with iOS or Android (Material) native look and feel. It is also an indispensable prototyping apps tool to show working app prototype as soon as possible in case you need to. Framework7 is created by Vladimir Kharlampidi (iDangero.us).</p>
-        <p>The main approach of the Framework7 is to give you an opportunity to create iOS and Android (Material) apps with HTML, CSS and JavaScript easily and clear. Framework7 is full of freedom. It doesn't limit your imagination or offer ways of any solutions somehow. Framework7 gives you freedom!</p>
-        <p>Framework7 is not compatible with all platforms. It is focused only on iOS and Android (Material) to bring the best experience and simplicity.</p>
-        <p>Framework7 is definitely for you if you decide to build iOS and Android hybrid app (Cordova or PhoneGap) or web app that looks like and feels as great native iOS or Android (Material) apps.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, explicabo? Impedit doloribus ut ipsam quod et, officiis fugiat omnis optio maiores, quam, suscipit doloremque quisquam magnam. Similique consequatur aperiam fuga?</p>
         </div>
     </div>
 </div>
