--- a/www/index.html
+++ b/www/index.html
@@ -75,7 +75,7 @@
                     <div class="list">
                         <ul>
                         <li>
-                            <a href="home/" class="item-link list-button">Sign In</a>
+                            <a href="/home/" class="item-link list-button">Sign In</a>
                         </li>
                         </ul>
                         <div class="block-footer">Some text with login information.</div>
