--- a/platforms/browser/www/index.html
+++ b/platforms/browser/www/index.html
@@ -21,6 +21,7 @@
     <!-- Your app title -->
     <title>Antrian App</title>
     <!-- Path to Framework7 Library CSS -->
+    <link rel="stylesheet" href="lib/framework7/css/framework7.ios.min.css">
     <link rel="stylesheet" href="lib/framework7/css/framework7.min.css">
     <!-- Path to your custom app styles-->
     <link href="css/style.css">
@@ -74,7 +75,7 @@
                     </div>
                     <div class="list">
                         <ul>
-                        <li>
+                        <li class="text-align-center">
                             <a href="/home/" class="item-link list-button">Sign In</a>
                         </li>
                         </ul>
