--- a/www/index.html
+++ b/www/index.html
@@ -74,8 +74,8 @@
                     </div>
                     <div class="list">
                         <ul>
-                        <li>
-                            <a href="/home/" class="item-link list-button">Sign In</a>
+                        <li class="text-align-center">
+                            <a href="/home/" class="item-link list-button">Login</a>
                         </li>
                         </ul>
                         <div class="block-footer">Some text with login information.</div>
