update js function

--- a/platforms/browser/www/home.html
+++ b/platforms/browser/www/home.html
@@ -2,13 +2,7 @@
 <div class="page" data-name="home-view">
     <div class="navbar">
         <div class="navbar-inner sliding">
-        <div class="left">
-            <a href="#" class="link back">
-            <i class="icon icon-back"></i>
-            <span class="ios-only">Back</span>
-            </a>
-        </div>
-        <div class="title">Pendaftaran</div>
+            <div class="title">Pendaftaran</div>
         </div>
     </div>
     <div class="page-content">
@@ -27,6 +21,9 @@
             </p>
             <p class="row">
                 <a class="col button button-large button-raised button-fill" href="/about/">Tentang</a>
+            </p>
+            <p class="row">
+                <a class="col button button-large button-raised button-fill" id="logout">Logout</a>
             </p>
         </div>
     </div>
