--- a/www/home.html
+++ b/www/home.html
@@ -28,6 +28,9 @@
             <p class="row">
                 <a class="col button button-large button-raised button-fill" href="/about/">Tentang</a>
             </p>
+            <p class="row">
+                <a class="col button button-large button-raised button-fill" id="logout">Logout</a>
+            </p>
         </div>
     </div>
 </div>
