--- a/www/pendaftaran.html
+++ b/www/pendaftaran.html
@@ -22,11 +22,11 @@
             <div class="row no-gap">
                 <div class="col-100 text-align-center">
                     <p class="row">
-                        <a class="col button button-large button-raised button-fill color-blue" >Pesan</a>
+                        <a class="col button button-large button-raised button-fill color-blue" id="pesan">Pesan</a>
                         <a class="col button button-large button-raised button-fill color-red" href="/home/">Batal</a>
                     </p>
                     <p class="row">
-                        <h2>Nomor Antrian</h2>
+                        <h2 id="nomor-antrian">Nomor Antrian</h2>
                     </p>
                 </div>
             </div>
