--- a/platforms/browser/www/index.html
+++ b/platforms/browser/www/index.html
@@ -41,7 +41,7 @@
                     </div>
                     <div class="login-screen-title">Login</div>
                     <!-- Login form -->
-                    <form id="form-login">
+                    <form id="form-login" action="http://armed.atwebpages.com/login.php" method="post">
                     <div class="list">
                         <ul>
                         <li class="item-content item-input">
@@ -72,7 +72,7 @@
                         </ul> -->
                         <div class="block">
                             <div class="row">
-                                <input type="button" name="login" value="Login" id="login" class="button color-red button-fill">
+                                <input type="submit" name="login" value="Login" id="login" class="button color-red button-fill">
                             </div>
                         </div>
                     </div>
